langtools/test/tools/javac/NonStaticFieldExpr3.out
NonStaticFieldExpr3.java:14:30: compiler.err.non-static.cant.be.ref: (- compiler.misc.kindname.variable), x
1 error
